(fix/Hover) Hover terminado

--- a/series.html
+++ b/series.html
@@ -113,10 +113,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>FamilyGuy</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/familyGuy.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -131,10 +133,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Futurama</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/futurama.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -149,10 +153,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Rick</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/rickMorty.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -167,10 +173,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>southPark</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/southPark.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -185,10 +193,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Simpson</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/simpsons.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -239,10 +249,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>friends</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/comedia/friends.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -257,10 +269,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>howMetMother</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/comedia/howMetMother.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -275,10 +289,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>santaClarita</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/comedia/santaClaritaDiet.jpg" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -293,10 +309,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>SexCity</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/comedia/sexCity.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -311,10 +329,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>TheBigBang</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/comedia/bigBangTheory.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -365,10 +385,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>gameThrones</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/gameThrones.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -383,10 +405,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>greysAnatomy</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/greysAnatomy.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -401,10 +425,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>LawOrder</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/lawOrder.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -419,10 +445,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>act</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/act.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -437,10 +465,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>lastOfUs</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/lastOfUs.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
