(fix/Hover) Errores solucionados

--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Una Pareja Explosiva</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/peliculas/drama/redWhiteRoyalBlue.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                 </div>
                             </div>
@@ -154,10 +156,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Ted</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/peliculas/animacion/spiderManAcross.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -175,10 +179,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Guardianes de la Bahia</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/gameThrones.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -196,7 +202,9 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Bad Boys Para Siempre</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/drama/lastOfUs.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
                                         Ver Trailer
@@ -217,10 +225,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <h3>Ride Along</h3>
+                                <figure class="banImageHover">
+                                    <img src="Public/img/Logos/series/animacion/rickMorty.png" alt="">
+                                </figure>
                                 <div class="botones">
                                     <button class="verTrailer">
-                                        Ver Trailer
+                                        Ver más...
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
@@ -232,27 +242,7 @@
                                 </div>
                             </div>
                         </figure>
-                        <figure class="imageDrama">
-                            <img
-                                src="/Public/img/caratulas/series/comedia/friends.jpg"
-                                alt=""
-                            />
-                            <div class="trans">
-                                <h3>Ride Along</h3>
-                                <div class="botones">
-                                    <button class="verTrailer">
-                                        Ver Trailer
-                                    </button>
-                                    <div class="video-container">
-                                        <span class="close">X</span>
-                                        <video
-                                            src="/Public/contenido/trailers/Peliculas/rideAlong.mp4"
-                                            controls
-                                        ></video>
-                                    </div>
-                                </div>
-                            </div>
-                        </figure>
+                        
                     </div>
                     <div class="btnFlecha flechaDerecha">
                         <button
