(feature/IntegracionCarrusel) correccion Luis.

--- a/index.html
+++ b/index.html
@@ -89,18 +89,28 @@
                         src="/Public/img/carrusel/redWhiteRoyalBlue.jpg"
                         alt="Imagen 2"
                     />
+                    <div class="slider-logo">
+                        <img src="Public/img/Logos/peliculas/drama/redWhiteRoyalBlue.png" class="superpuesta"/>
+                    </div>
                 </div>
+                
                 <div class="slider-item">
                     <img
                         src="/Public/img/carrusel/spidermanAcross.jpg"
                         alt="Imagen 3"
                     />
+                    <div class="slider-logo">
+                        <img src="Public/img/Logos/peliculas/animacion/spiderManAcross.png" class="superpuesta"/>
+                    </div>  
                 </div>
                 <div class="slider-item">
                     <img
                         src="Public/img/carrusel/gameThrones.jpg"
                         alt="Imagen 3"
                     />
+                    <div class="slider-logo">
+                        <img src="Public/img/Logos/series/drama/gameThrones.png" class="superpuesta"/>
+                    </div>
                 </div>
 
                 <div class="slider-item">
@@ -108,6 +118,9 @@
                         src="Public/img/carrusel/rickMorty.jpg"
                         alt="Imagen 4"
                     />
+                    <div class="slider-logo">
+                        <img src="Public/img/Logos/series/animacion/rickMorty.png" class="superpuesta"/>
+                    </div>
                 </div>
 
                 <div class="slider-item">
@@ -115,6 +128,9 @@
                         src="Public/img/carrusel/friends.jpg"
                         alt="Imagen 5"
                     />
+                    <div class="slider-logo">
+                        <img src="Public/img/Logos/series/comedia/friends.png" class="superpuesta"/>
+                    </div>
                 </div>
             </div>
         </section>
