correcciones slider-home

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="Public/css/normalize.css">
-        <link rel="stylesheet" href="../Public/css/style.css" />
+        <link rel="stylesheet" href="Public/css/style.css" />
         <link
             rel="shortcut icon"
             href="Public/img/principales/principal.png"
@@ -86,8 +86,8 @@
             <div class="slider-container">
                 <div class="slider-item">
                     <img
-                        src="/Public/img/carrusel/redWhiteRoyalBlue.jpg"
-                        alt="Imagen 2"
+                        src="Public/img/carrusel/redWhiteRoyalBlue.jpg"
+                        alt="Imagen 1"
                     />
                     <div class="slider-logo">
                         <img src="Public/img/Logos/peliculas/drama/redWhiteRoyalBlue.png" class="superpuesta"/>
@@ -96,8 +96,8 @@
                 
                 <div class="slider-item">
                     <img
-                        src="/Public/img/carrusel/spidermanAcross.jpg"
-                        alt="Imagen 3"
+                        src="Public/img/carrusel/spidermanAcross.jpg"
+                        alt="Imagen 2"
                     />
                     <div class="slider-logo">
                         <img src="Public/img/Logos/peliculas/animacion/spiderManAcross.png" class="superpuesta"/>
@@ -307,7 +307,7 @@
         </figure>
     </footer>
 </html>
-<script src="../Public/js/style.js"></script>
-<script src="../Public/js/scroll.js"></script>
-<script src="/Public/js/modal.js"></script>
+<script src="Public/js/style.js"></script>
+<script src="Public/js/scroll.js"></script>
+<script src="Public/js/modal.js"></script>
 <script src="Public/js/hamburguer.js"></script>
