(fix/correctHover) Hover con responsive terminado.

--- a/peliculas.html
+++ b/peliculas.html
@@ -76,11 +76,12 @@
                                 alt=""
                             />
                             <div class="trans">
-                                <figure class="banImageHover">
+                                <h3 class="wordMovie">Gato con Botas</h3>
+                                <figure class="banImagenHover">
                                     <img src="Public/img/Logos/peliculas/animacion/pussInBoots.png" alt="">
                                 </figure>
                                 <div class="modalPrincipal">
-                                    <div class="botones">
+                                    <div class="botones" id="botonGato">
                                         <button class="verTrailer">
                                             Ver más...
                                         </button>
@@ -99,6 +100,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Spiderman: Across the spiderverse</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/animacion/spiderManAcross.png" alt="">
                                 </figure>
@@ -121,6 +123,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Spiderman: Into the spiderverse</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/animacion/spiderManInto.png" alt="">
                                 </figure>
@@ -137,6 +140,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">The Bad Guys</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/animacion/badGuys.png" alt="">
                                 </figure>
@@ -153,6 +157,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">El libro de la vida</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/animacion/bookOfLife.png" alt="">
                                 </figure>
@@ -191,6 +196,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Bad boys Para Siempre</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/comedia/badBoys.png" alt="">
                                 </figure>
@@ -212,6 +218,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Baywatch Guardianes de la Bahia</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/comedia/baywatch.png" alt="">
                                 </figure>
@@ -232,6 +239,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Bullet Train</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/comedia/bulletTrain.png" alt="">
                                 </figure>
@@ -252,6 +260,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Ride Along</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/comedia/rideAlong.png" alt="">
                                 </figure>
@@ -272,6 +281,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Ted</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/comedia/ted.png" alt="">
                                 </figure>
@@ -314,6 +324,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Oppenheimer</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/oppenheimer.png" alt="">
                                 </figure>
@@ -334,6 +345,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Red, White and Royal Blue</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/redWhiteRoyalBlue.png" alt="">
                                 </figure>
@@ -354,6 +366,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Bajo la Misma Estrella</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/faultOurStars.png" alt="">
                                 </figure>
@@ -374,6 +387,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">El Joker</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/joker.png" alt="">
                                 </figure>
@@ -394,6 +408,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">La Ballena</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/whale.png" alt="">
                                 </figure>
