--- a/series.html
+++ b/series.html
@@ -115,6 +115,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">family Guy</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/familyGuy.png" alt="">
                                 </figure>
@@ -135,6 +136,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">futurama</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/futurama.png" alt="">
                                 </figure>
@@ -155,6 +157,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">mentes criminales</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/rickMorty.png" alt="">
                                 </figure>
@@ -175,6 +178,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">south Park</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/southPark.png" alt="">
                                 </figure>
@@ -195,6 +199,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">los Simpsons</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/simpsons.png" alt="">
                                 </figure>
@@ -251,6 +256,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">friends</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/comedia/friends.png" alt="">
                                 </figure>
@@ -271,6 +277,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">how I Met Your Mother</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/comedia/howMetMother.png" alt="">
                                 </figure>
@@ -291,6 +298,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">santa Clarita</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/comedia/santaClaritaDiet.jpg" alt="">
                                 </figure>
@@ -311,6 +319,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">sexCity</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/comedia/sexCity.png" alt="">
                                 </figure>
@@ -331,6 +340,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">the Big Bang Theory</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/comedia/bigBangTheory.png" alt="">
                                 </figure>
@@ -387,6 +397,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">juego de Tronos</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/gameThrones.png" alt="">
                                 </figure>
@@ -407,6 +418,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">grey's Anatomy</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/greysAnatomy.png" alt="">
                                 </figure>
@@ -427,6 +439,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">ley y orden</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/lawOrder.png" alt="">
                                 </figure>
@@ -447,6 +460,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">the act</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/act.png" alt="">
                                 </figure>
@@ -467,6 +481,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">the last of us</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/lastOfUs.png" alt="">
                                 </figure>
