--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Red, White and Royal Blue</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/drama/redWhiteRoyalBlue.png" alt="">
                                 </figure>
@@ -161,6 +162,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">spiderman: AcrossTheSpiderverse</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/peliculas/animacion/spiderManAcross.png" alt="">
                                 </figure>
@@ -184,6 +186,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Juego de Tronos</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/gameThrones.png" alt="">
                                 </figure>
@@ -207,6 +210,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">the last of us</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/drama/lastOfUs.png" alt="">
                                 </figure>
@@ -230,6 +234,7 @@
                                 alt=""
                             />
                             <div class="trans">
+                                <h3 class="wordMovie">Rick and Morty</h3>
                                 <figure class="banImageHover">
                                     <img src="Public/img/Logos/series/animacion/rickMorty.png" alt="">
                                 </figure>
