--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 </ul>
             </nav>
 
-            <input id="buscador" class="seeker" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
 
 
             <a href="index.html">
@@ -77,12 +76,7 @@
                     </li>
                 </ul>
                 <div id="infoCompany">
-                    <input
-                        id="buscadorBurguer"
-                        class="seeker"
-                        type="text"
-                        placeholder="Buscar"
-                    />
+                    <div></div>
                 </div>
             </nav>
         </header>
